Refactored validating fields util and dynamically populated the domains with the created id in db